--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,14 @@
-== README
+Project: Rails
+This is a Jumpstart Labs Blogger Tutorial
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Create a simple blog system and learn the basics of Ruby on Rails including:
 
-Things you may want to cover:
+Models, Views, and Controllers (MVC)
+Data Structures & Relationships
+Routing
+Migrations
+Views with forms, partials, and helpers
+RESTful design
+Adding gems for extra features
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+http://www.theodinproject.com/web-development-101/ruby-on-rails?ref=lc-pb
