--- a/README.rdoc
+++ b/README.rdoc
@@ -3,12 +3,12 @@ Project: Rails
 This is from Jumpstart Labs Blogger Tutorial
 
 Create a simple blog system and learn the basics of Ruby on Rails including:
-Models, Views, and Controllers (MVC)
-Data Structures & Relationships
-Routing
-Migrations
-Views with forms, partials, and helpers
-RESTful design
+Models, Views, and Controllers (MVC),
+Data Structures & Relationships,
+Routing,
+Migrations,
+Views with forms, partials, and helpers,
+RESTful design,
 Adding gems for extra features
 
 http://www.theodinproject.com/web-development-101/ruby-on-rails?ref=lc-pb
